# avai_v2

./: .gitignore  .pinnacle-batch-optimization-summary.md  API_DOCUMENTATION.md  README.md  TRADING_IMPROVEMENTS.md  database-proxy.py  football_database_schema.sql  instrumentation.ts  leagues_elo.json  match-pinnacle-fixtures.py  middleware.ts  monaco-api.json  next.config.cjs  next.config.js  package-lock.json  package.json  run-calculations.js  run_calculations.js  schema.sql  setup-database.js  stats-calculations.js  tsconfig.json
odds-engine/: Cargo.toml  README.md  run_engine.bat  test.html
odds-engine/src/: config.rs  main.rs  processor_client.rs
odds-engine/src/database/: mod.rs  monaco_persistence.rs
odds-engine/src/monaco/: client.rs  db.rs  fixture_mapping.rs  handlers.rs  market_init.rs  mod.rs  order_book.rs  persistence.rs  stream.rs  types.rs
odds-engine/src/pinnacle/: client.rs  db.rs  mod.rs  types.rs
odds-engine/src/shared/: db.rs  fixture_matching.rs  mod.rs  types.rs
odds-engine/target_temp/debug/.fingerprint/ahash-6069b1b1d627cc5d/: build-script-build-script-build
odds-processor/: Cargo.toml  README.md  run_processor.bat
odds-processor/src/: config.rs  db.rs  main.rs
odds-processor/src/cache/: mod.rs
odds-processor/src/calculations/: fair_odds.rs  mod.rs
odds-processor/src/filters/: arithmetic.rs  context.rs  evaluator.rs  mod.rs  path.rs  types.rs
odds-processor/src/network/: mod.rs  stream.rs  tcp.rs
odds-processor/src/types/: mod.rs
odds-processor/static/: filters.html  index.html
(+414 files in other folders)
