[package]
name = "odds-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "gzip", "brotli"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
dashmap = "5.5" # For concurrent in-memory state
url = "2.5"
regex = "1.10"
